--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              renedcdsl@hotmail.fr
 description:        My Data Science projects
 author:             René de Champs
 baseurl:            ""
-url:                "https://renedc.github.io"
+url:                "https://renedcdsl.github.io"
 
 # Social Profiles
 #twitter_username:   
