dl_1 to html, attempt formula in text

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              René's Portfolio
 email:              renedcdsl@hotmail.fr
 description:        My Data Science projects
 author:             René de Champs
-baseurl:            ""
+#baseurl:            ""
 url:                "https://renedcdsl.github.io"
 
 # Social Profiles
