cv, contact form up, attempt linkedin_url

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url:                "https://renedcdsl.github.io"
 github_username:    ReneDCDSL
 facebook_username:  René de Champs
 #instagram_username:  
-linkedin_username:  René de Champs
+linkedin_url:       https://www.linkedin.com/in/ren%C3%A9-de-champs-2679bb269
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
