footer contact redirection, chess icon attempt

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ github_username:    ReneDCDSL
 facebook_username:  René de Champs
 #instagram_username:  
 linkedin_url:       https://www.linkedin.com/in/ren%C3%A9-de-champs-2679bb269
+chess(dot)com_username: bananuete
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
